--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">DroidSwoosh</string>
+    <string name="i_am_a">I am a:</string>
+    <string name="beginner">BEGINNER</string>
+    <string name="background_image">background_image</string>
+    <string name="app_logo">app_logo</string>
+    <string name="baller">BALLER</string>
+    <string name="finish">FINISH</string>
 </resources>
